# orgcalendar

./: CMakeLists.txt
plasmoid/: metadata.desktop
plasmoid/contents/ui/: main.qml
